--- a/docs/articles/samples/toc.yml
+++ b/docs/articles/samples/toc.yml
@@ -124,6 +124,8 @@
   href: IntroTagColumn.md
 - name: IntroTailcall
   href: IntroTailcall.md
+- name: IntroWakeLock
+  href: IntroWakeLock.md
 - name: IntroWasm
   href: IntroWasm.md
 - name: IntroUnicode
