Run unit-tests also on Windows platform

--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -22,6 +22,9 @@ jobs:
       - name: Run task 'build'
         shell: cmd
         run: ./build.cmd build
+      - name: Run task 'unit-tests'
+        shell: cmd
+        run: ./build.cmd unit-tests -e
       - name: Run task 'in-tests-core'
         shell: cmd
         run: ./build.cmd in-tests-core -e
